kubernetes/cluster/ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gatewayingress
  namespace: logging
spec:
  rules:
    - host: loki-gateway.home.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-gateway
                port:
                  number: 8080
