kubernetes/cluster/ingress/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: postgres.70ld.home
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: postgres-postgresql
                port:
                  number: 5432
