kubernetes/cluster/ingress/rustfs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-ingress
  namespace: rustfs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/session-cookie-name: rustfs
    # cert-manager
    cert-manager.io/cluster-issuer: 'letsencrypt-cloudflare-dns-issuer'
spec:
  ingressClassName: nginx
  rules:
    - host: rustfs.70ld.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 5050
  tls:
    - hosts:
        - rustfs.70ld.dev
      secretName: rustfs-ingress-tls
